add `PathManipulator` to `PathMaker`